chore: delete response type (#49)
